Billede og flex/grid

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karls CSS Test Site</title>
+    <title>Karls Test Site</title>
     <link rel="stylesheet" href="style.css">    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <script src="script.js"></script>
@@ -14,6 +14,19 @@
         <div class="heading">
             <h1>Karls CSS test-site</h1>
             <h2>- stedet, hvor Karl kan teste de CSS funktioner, han er lidt usikker på</h2>
+        </div>
+        <div class="flex-container">
+            <img class="flex-image" src="img/skotland.jpg" alt="Dette er et billede af Edinburgh Castle">
+        </div>
+        <div class="flex-container">
+            <div class="flex"></div>
+            <div class="flex"></div>
+            <div class="flex"></div>
+        </div>
+        <div class="grid-container">
+            <div class="flex grid1"></div>
+            <div class="flex grid2"></div>
+            <div class="flex grid3"></div>
         </div>
     </section>
 </body>
