--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
             <img class="flex-image" src="img/skotland.jpg" alt="Dette er et billede af Edinburgh Castle">
         </div>
         <div class="flex-container">
-            <div class="flex"></div>
-            <div class="flex"></div>
-            <div class="flex"></div>
+            <div class="flex-element"></div>
+            <div class="flex-element"></div>
+            <div class="flex-element"></div>
         </div>
         <div class="grid-container">
-            <div class="flex grid1"></div>
-            <div class="flex grid2"></div>
-            <div class="flex grid3"></div>
+            <div class="grid-element grid1"></div>
+            <div class="grid-element grid2"></div>
+            <div class="grid-element grid3"></div>
+            <div class="grid-element grid4"></div>
+            <div class="grid-element grid5"></div>
+            <div class="grid-element grid6"></div>
+            <div class="grid-element grid7"></div>
         </div>
     </section>
 </body>
